saved builds page integrated to database

--- a/Frontend/pts.html
+++ b/Frontend/pts.html
@@ -11,6 +11,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        // Sayfa render edilmeden temayı uygula (Titremeyi önler)
+        (function() {
+            const savedTheme = localStorage.getItem('theme_builder');
+            const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+            
+            if (savedTheme === 'dark' || (!savedTheme && prefersDark)) {
+                document.documentElement.classList.add('dark');
+            } else {
+                document.documentElement.classList.remove('dark');
+            }
+        })();
+    </script>
 
     <link rel="stylesheet" href="./styles.css">
 </head>
