saved builds page integrated to database

--- a/Frontend/pts.html
+++ b/Frontend/pts.html
@@ -1146,7 +1146,7 @@ async function initializeWizard() {
             case 'ram':
                 if (item.memoryType) details += `<li><strong>Tip:</strong> ${item.memoryType}</li>`;
                 if (item.speed) details += `<li><strong>Hız:</strong> ${item.speed} MHz</li>`;
-                if (item.moduleCount) details += `<li><strong>Kit:</strong> ${item.moduleCount} x ${item.capacityPerModule}GB</li>`;
+                if (item.moduleCount) details += `<li><strong>Kit:</strong> ${item.moduleCount} Adet</li>`;
                 break;
             case 'gpu':
                 if (item.length) details += `<li><strong>Uzunluk:</strong> ${item.length} mm</li>`;
