language improvement and some bugs fixed

--- a/Frontend/pts.html
+++ b/Frontend/pts.html
@@ -266,6 +266,7 @@
             "auth-welcome": "Hoş geldin,",
             "nav-profile": "Hesabım",
             "auth-logout": "Çıkış Yap",
+            "action-save-system":"Sistemi Kaydet",
             "filter-title": "Filtre Seçenekleri",
             "filter-apply": "Filtreleri Uygula",
             "main-title": "Bir CPU Seçin",
@@ -349,6 +350,7 @@
             "filter-apply": "Apply Filters",
             "main-title": "Choose a CPU",
             "status-incompatible": "Incompatible",
+            "action-save-system":"Save Build",
             "action-add": "Add",
             "action-selected": "Selected",
             "action-remove": "Remove",
