language improvement and some bugs fixed

--- a/Frontend/favorilerim.html
+++ b/Frontend/favorilerim.html
@@ -205,7 +205,7 @@
             "menu-profile": "Profile Info",
             "menu-systems": "My Saved Builds",
             "menu-password": "Change Password",
-            "footer-copyright": "© 2025 PCPartsBuild. All Rights Reserved. Contact Us: pcpartsbuild@gmail.com",
+            "footer-copyright": "© 2025 PCPartsBuild. All Rights Reserved. Contact Us:",
             "favorites-loading": "Loading...",
             "favorites-empty": "No items in this category yet.",
             "favorites-title-suffix": "Favorites",
