--- a/Frontend/pts.html
+++ b/Frontend/pts.html
@@ -435,13 +435,12 @@
     };
 const toggleDarkMode = () => {
     const html = document.documentElement;
-    const isDarkMode = html.classList.toggle('dark'); // Tek satırda class ekle/çıkar
-    const newTheme = isDarkMode ? 'dark' : 'light';
+    // Tek bir hamlede class değiştir
+    const isDark = html.classList.toggle('dark');
+    localStorage.setItem('theme_builder', isDark ? 'dark' : 'light');
     
-    localStorage.setItem('theme_builder', newTheme);
-    
-    // İkonları hızlıca güncelle
-    updateIcons(isDarkMode);
+    // İkon geçişlerini CSS'e bırakmak en iyisidir, 
+    // JS ile sadece anlık durumu loglayabilirsin.
 };
 
 const updateIcons = (isDark) => {
