--- a/Frontend/sifremi-unuttum.html
+++ b/Frontend/sifremi-unuttum.html
@@ -50,7 +50,7 @@
                     <div>
                         <label class="block text-sm font-medium text-gray-300 mb-1" for="code">Doğrulama Kodu</label>
                         <input class="w-full bg-gray-800 border-gray-700 rounded-md focus:ring-primary focus:border-primary text-white text-center text-2xl tracking-widest placeholder:text-gray-600 transition-default" 
-                               id="code" name="code" placeholder="123456" type="text" maxlength="6" required/>
+                               id="code" name="code" placeholder="******" type="text" maxlength="6" required/>
                     </div>
                     <button id="verifyBtn" class="w-full bg-primary text-white font-semibold py-3 px-6 rounded-lg shadow-lg flex items-center justify-center gap-2 mt-2 hover:bg-primary/90 transition-colors" type="submit">
                         Kodu Doğrula
